# Data

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/connectors/: __init__.py  airflow.py  dbt.py
backend/app/routers/: dashboard.py  incidents.py  ingest.py
backend/app/services/: diagnosis.py  fingerprint.py  ingestion.py  knowledge.py  redaction.py  triage.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_e2e.py  test_fingerprint.py  test_redaction.py  test_triage.py
frontend/: index.html
frontend/src/: api.ts  components.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DiagnosisPanel.tsx  IncidentCard.tsx  Layout.tsx  Pills.tsx  icons.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/lib/: time.ts
frontend/src/pages/: Dashboard.tsx  Diagnose.tsx  IncidentDetail.tsx  Incidents.tsx  Integrations.tsx  KnowledgeBase.tsx  Landing.tsx  Pipelines.tsx  Settings.tsx  dashboard.css  incidents.css  integrations.css  kb.css  landing.css  pipelines.css  settings.css
